# marracheck

./: .gitignore  .gitmodules  Makefile  README.md  dune  marracheck.opam  opam-bin-cache.sh  todo.txt
experiments/compute_cover/: comparatif_cover  log_lp_minimal_criterion  log_lp_minimize_new  log_maxsat_budget_30  log_maxsat_budget_30_after_debug  log_maxsat_budget_30_after_debug_minimize_new  log_maxsat_debug  log_wmax_minimal_criterion  log_wmax_minimize_new  log_wmax_minimize_new__maxres.wmax__true  log_wmax_minimize_new__maxsat_engine__core_maxsat  log_wmax_minimize_new__maxsat_engine__pd-maxres  log_wmax_minimize_new__maxsat_engine__wmax
lib/: MaxSat.ml  OpamZ3.ml  cache_script.ml  data.ml  dune  fs.ml  fs.mli  lib.ml  lib.mli  solverWrapper.ml  state.ml  state.mli  test.ml  utils.ml
lib_compute_cover/: OpamDefaultZ3.ml  OpamZ3_lp.ml  OpamZ3_wmax.ml  dune  solverWrapper.ml
src/: compute_cover.ml  dune  list_installed.ml  marracheck.ml  opam_bin_cache.ml  test.ml  worker.ml
