opam-version: "2.0"
maintainer: [
  "Armaël Guéneau <armael.gueneau@ens-lyon.org>"
  "Gabriel Scherer <gabriel.scherer@gmail.com>"
]
authors: [
  "Armaël Guéneau <armael.gueneau@ens-lyon.org>"
  "Gabriel Scherer <gabriel.scherer@gmail.com>"
]
license: "MIT"
homepage: "https://github.com/Armael/marracheck/"
doc: "https://gitlab.com/gasche/marracheck-design-notes"
bug-reports: "https://github.com/Armael/marracheck/issues"
dev-repo: "git+https://github.com/Armael/marracheck.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {>= "1.6"}
  "bos"
  "oseq"
  "containers"
  "cmdliner"
  "ezjsonm" {>= "1.1.0"}
  "lwt"
  "z3" {>= "4.8.4"}
#
# Dependencies for the vendored opam libs
# (see the .opam files in the opam git submodule)
  "re" {>= "1.9.0"}
  "cmdliner" {>= "0.9.8"}
  "ocamlgraph"
  "cppo"
  "mccs" {>= "1.1+9"}
  "dose3" {>= "5"}
  "cudf" {>= "0.7"}
]
synopsis: "Gotta check them all!"
description: """
Marracheck builds all opam packages at once. Or at least tries fairly hard.
"""
