opam-version: "2.0"
maintainer: [
  "Armaël Guéneau <armael.gueneau@ens-lyon.org>"
  "Gabriel Scherer <gabriel.scherer@gmail.com>"
]
authors: [
  "Armaël Guéneau <armael.gueneau@ens-lyon.org>"
  "Gabriel Scherer <gabriel.scherer@gmail.com>"
]
license: "MIT"
homepage: "https://github.com/Armael/marracheck/"
doc: "https://gitlab.com/gasche/marracheck-design-notes"
bug-reports: "https://github.com/Armael/marracheck/issues"
dev-repo: "git+https://github.com/Armael/marracheck.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {>= "2.5"}
  "bos"
  "oseq"
  "containers" {>= "3.6"}
  "cmdliner" {>= "1.1.0"}
  "ezjsonm" {>= "1.1.0"}
  "yojson"
  "lwt"
  "dmap"
#  "z3" {>= "4.8.4"}
  "opam-file-format" {= "2.1.3"}
#
# Dependencies for the vendored opam libs
# (see the .opam files in the vendored-opam git submodule)
  "re" {>= "1.9.0"}
  "ocamlgraph"
  "cppo"
  "mccs" {>= "1.1+9"}
  "dose3" {>= "6.1"}
  "cudf" {>= "0.7"}
  "spdx_licenses"
  "opam-0install-cudf"
]
synopsis: "Gotta check them all!"
description: """
Marracheck builds all opam packages at once. Or at least tries fairly hard.
"""
