(executables
  (names compute_cover worker marracheck)
  (modules compute_cover worker marracheck)
  (libraries marracheck_lib ezjsonm containers cmdliner))

(executable
  (name opam_bin_cache)
  (modules opam_bin_cache)
  (libraries bos fpath rresult))

(executable
  (name list_installed)
  (modules list_installed)
  (libraries yojson marracheck_lib containers))