(executable
  (name marracheck)
  (public_name marracheck)
  (modules marracheck)
  (libraries marracheck_lib ezjsonm containers cmdliner))

(executable
  (name compute_cover)
  (modules compute_cover)
  (libraries marracheck_lib marracheck_lib_computer_cover ezjsonm containers cmdliner))

(executable
  (name opam_bin_cache)
  (modules opam_bin_cache)
  (libraries bos fpath rresult))

(executable
  (name list_installed)
  (modules list_installed)
  (libraries yojson marracheck_lib containers))
